--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -949,11 +949,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1781, 16)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1781 entries, 0 to 1780\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   URL                        1781 non-null   object \n",
+      " 1   NUMBER_SPECIAL_CHARACTERS  1781 non-null   int64  \n",
+      " 2   CHARSET                    1781 non-null   object \n",
+      " 3   SERVER                     1780 non-null   object \n",
+      " 4   CONTENT_LENGTH             969 non-null    float64\n",
+      " 5   WHOIS_COUNTRY              1781 non-null   object \n",
+      " 6   WHOIS_STATEPRO             1781 non-null   object \n",
+      " 7   WHOIS_REGDATE              1781 non-null   object \n",
+      " 8   WHOIS_UPDATED_DATE         1781 non-null   object \n",
+      " 9   DIST_REMOTE_TCP_PORT       1781 non-null   int64  \n",
+      " 10  REMOTE_IPS                 1781 non-null   int64  \n",
+      " 11  APP_BYTES                  1781 non-null   int64  \n",
+      " 12  SOURCE_APP_BYTES           1781 non-null   int64  \n",
+      " 13  APP_PACKETS                1781 non-null   int64  \n",
+      " 14  DNS_QUERY_TIMES            1780 non-null   float64\n",
+      " 15  Type                       1781 non-null   int64  \n",
+      "dtypes: float64(2), int64(7), object(7)\n",
+      "memory usage: 222.8+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(websites_fiveless.shape)\n",
+    "websites_fiveless.info()"
    ]
   },
   {
@@ -967,20 +1000,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1781, 15)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "#CONTENT_LENGTH has a high number of null values\n",
+    "websites_fiveless.dropna(axis=1, thresh=int(0.6*len(websites_fiveless))).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Content length column has almost 50% of missing values so we drop it\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Content length column has almost 50% of missing values so we drop it')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your code here\n",
+    "websites_fiveless.dropna(inplace=True, how='any')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(967, 16)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "websites_fiveless.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we dropped rows that have at least one null value\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your comment here\n",
+    "print('we dropped rows that have at least one null value')"
    ]
   },
   {
@@ -994,11 +1095,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(967, 16)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 967 entries, 0 to 1780\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   URL                        967 non-null    object \n",
+      " 1   NUMBER_SPECIAL_CHARACTERS  967 non-null    int64  \n",
+      " 2   CHARSET                    967 non-null    object \n",
+      " 3   SERVER                     967 non-null    object \n",
+      " 4   CONTENT_LENGTH             967 non-null    float64\n",
+      " 5   WHOIS_COUNTRY              967 non-null    object \n",
+      " 6   WHOIS_STATEPRO             967 non-null    object \n",
+      " 7   WHOIS_REGDATE              967 non-null    object \n",
+      " 8   WHOIS_UPDATED_DATE         967 non-null    object \n",
+      " 9   DIST_REMOTE_TCP_PORT       967 non-null    int64  \n",
+      " 10  REMOTE_IPS                 967 non-null    int64  \n",
+      " 11  APP_BYTES                  967 non-null    int64  \n",
+      " 12  SOURCE_APP_BYTES           967 non-null    int64  \n",
+      " 13  APP_PACKETS                967 non-null    int64  \n",
+      " 14  DNS_QUERY_TIMES            967 non-null    float64\n",
+      " 15  Type                       967 non-null    int64  \n",
+      "dtypes: float64(2), int64(7), object(7)\n",
+      "memory usage: 128.4+ KB\n",
+      "\n",
+      "non-nulls match the shape of the dataframe so we are good\n"
+     ]
+    }
+   ],
    "source": [
-    "# Examine missing values in each column\n"
+    "# Examine missing values in each column\n",
+    "print(websites_fiveless.shape)\n",
+    "websites_fiveless.info()\n",
+    "print('\\nnon-nulls match the shape of the dataframe so we are good')"
    ]
   },
   {
