--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
       "TCP_CON.. and APP_PACKETS\n",
       "APP_BYTES and REMOTE_APP_BYTES \n",
       "SOURCE_APP.. and TCP_CONVER\n",
-      "\n"
+      "SOURCE_APP.. and REMOTE_APP_BYTES\n"
      ]
     }
    ],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "(1781, 15)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "(967, 16)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
        "       'AE', 'IE', 'PH', 'UY'], dtype=object)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
        "       'BY', 'AE', 'IE', 'PH', 'UY'], dtype=object)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "<AxesSubplot:xlabel='WHOIS_COUNTRY', ylabel='count'>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "Name: WHOIS_COUNTRY, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -1336,7 +1336,7 @@
        "38"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
        "       'CH'], dtype=object)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
        "967"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
        "       'windows-1251', 'ISO-8859'], dtype=object)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
        "       'Apache/2.2.16 (Debian)'], dtype=object)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 50,
    "metadata": {
     "scrolled": false
    },
@@ -1701,7 +1701,7 @@
        "Name: SERVER, dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
        "[967 rows x 29 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2147,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2209,13 +2209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "X_train, X_test, y_train, y_test = train_test_split(website_dummy.drop('Type',axis=1),website_dummy.Type,test_size=0.2)\n"
    ]
   },
   {
@@ -2229,12 +2230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "LogisticModel = LogisticRegression(max_iter=1000)"
    ]
   },
   {
@@ -2246,12 +2248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=1000)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "LogisticModel.fit(X_train,y_train)\n"
    ]
   },
   {
@@ -2263,12 +2276,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = LogisticModel.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    176\n",
+       "1     18\n",
+       "Name: Type, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[165  11]\n",
+      " [ 13   5]]\n",
+      "0.8762886597938144\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.94      0.93       176\n",
+      "           1       0.31      0.28      0.29        18\n",
+      "\n",
+      "    accuracy                           0.88       194\n",
+      "   macro avg       0.62      0.61      0.61       194\n",
+      "weighted avg       0.87      0.88      0.87       194\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test,y_pred))\n",
+    "\n",
+    "print(accuracy_score(y_test,y_pred))\n",
+    "print(classification_report(y_test,y_pred))"
    ]
   },
   {
@@ -2280,12 +2355,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seems our model does not detect very well malicious websites.. this can be explained because our train data contains a majority of\n",
+      "bening sites so it\"s kind of skewed\n"
+     ]
+    }
+   ],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "print('Seems our model does not detect very well malicious websites..',\n",
+    "     'this can be explained because our train data contains a majority of\\nbening sites so it\"s kind of skewed')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    861\n",
+       "1    106\n",
+       "Name: Type, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "websites_fiveless.Type.value_counts()"
    ]
   },
   {
@@ -2299,12 +2406,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "Kmodel = KNeighborsClassifier(n_neighbors=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=3)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Kmodel.fit(X_train,y_train)"
    ]
   },
   {
@@ -2316,12 +2444,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "y_pred = Kmodel.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[166  10]\n",
+      " [  8  10]]\n",
+      "0.9072164948453608\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test,y_pred))\n",
+    "print(accuracy_score(y_test,y_pred))"
    ]
   },
   {
@@ -2335,12 +2483,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[167   9]\n",
+      " [  7  11]]\n",
+      "0.9175257731958762\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "Kmodel = KNeighborsClassifier(n_neighbors=5)\n",
+    "Kmodel.fit(X_train,y_train)\n",
+    "y_pred = Kmodel.predict(X_test)\n",
+    "print(confusion_matrix(y_test,y_pred))\n",
+    "print(accuracy_score(y_test,y_pred))"
    ]
   },
   {
@@ -2352,12 +2514,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "print('The model with k=5 is slightly better')\n"
    ]
   },
   {
@@ -2375,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
